# lifelens

./: .env.example  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 067a23aab359_rename_the_full_name_column_in_user_to_.py  162db532ba04_enable_vector_support.py  2d88de201088_fix_uuid_types_in_media_models.py  3dab504c77a6_add_chat_schema_for_conversations.py  673c97b98cea_init_schema.py  8202319e3f01_add_created_at_field_in_media_metadata_.py  95546785f29c_remove_video_type_and_related_columns.py  9ee6b299e59a_init.py  afea5faa0c67_remove_storage_url_for_media_schema.py
backend/app/: api.py  logging.py  main.py  models.py  tasks.py
backend/app/core/: config.py  db.py  deps.py  security.py
backend/app/models/: chat.py  media.py  user.py
backend/app/routers/: media.py
backend/app/routes/: auth.py  chat.py  media.py  query.py  user.py
backend/app/schemas/: auth.py  chat.py  user.py
backend/app/services/: auth_service.py  chat_services.py  media_service.py  ml_services.py  query_processor.py  semantic_search.py  temporal_filtering.py  user_service.py
frontend/: .dockerignore  Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: dashboard-layout.tsx  protected-route.tsx  task-status-poller.tsx  theme-provider.tsx
frontend/src/hooks/: useAuth.ts  useChat.ts  useMedia.ts
frontend/src/lib/: api-types.ts  api.ts
frontend/src/pages/: Chat.tsx  Dashboard.tsx  (+6 more)
(+3 files in other folders)
